classDiagram
    class ITicket {
        <<interface>>
        +GetTicketInfo() string
    }
    class IPriceable {
        <<interface>>
        +CalculatePrice() decimal
    }
    class IReservable {
        <<interface>>
        +Reserve() bool
    }
    class Ticket {
        <<abstract>>
        +EventName string
        +EventDate DateTime
        +Seat string
        +GetTicketInfo() string
        +CalculatePrice()* decimal
        +Reserve()* bool
    }
    class ConcertTicket {
        +Artist string
        +CalculatePrice() decimal
        +Reserve() bool
        +GetTicketInfo() string
    }
    class ITicketPrinter {
        <<interface>>
        +PrintTicket(ITicket) void
    }
    class TicketPrinter {
        +PrintTicket(ITicket) void
    }
    class TicketManager {
        -tickets List<ITicket>
        -printer ITicketPrinter
        +AddTicket(ITicket) void
        +PrintAllTickets() void
    }

    ITicket <|.. Ticket
    IPriceable <|.. Ticket
    IReservable <|.. Ticket
    Ticket <|-- ConcertTicket
    ITicketPrinter <|.. TicketPrinter
    TicketManager o-- ITicketPrinter
    TicketManager o-- ITicket
